added programbarchooser to allow easier default configuration in the future

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -32,7 +32,8 @@ headers = [
   'progressbars/noindicator.hpp',
   'progressbars/progressindicator.hpp',
   'progressbars/consoleprogressbar.hpp',
-  'progressbars/progresstqdm.hpp'
+  'progressbars/progresstqdm.hpp',
+  'progressbars/progressbarchooser.hpp'
 ]
 
 # -- targets --
