added __version__ attribute

--- a/src/pymodule/meson.build
+++ b/src/pymodule/meson.build
@@ -32,7 +32,7 @@ py_tools = pymod.extension_module(
     override_options: [
         #'cpp_rtti=true',
     ],
-    cpp_args : '-DPYTHON_LIB='+module_name,
+    cpp_args : ['-DMODULE_NAME='+module_name, '-DMODULE_VERSION=' + '"' + meson.project_version() + '"'],
     install : true,
     install_dir : pythoninstallpath,
     install_tag : 'python-runtime'
