added stream class helper (to/from binary)

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -16,6 +16,7 @@ headers = [
   'helper.hpp',
   'classhelpers/objectprinter.hpp',
   'classhelpers/bitsery.hpp',
+  'classhelpers/stream.hpp',
   'classhelpers/bitsery_helpers/helpers.hpp',
   'classhelpers/bitsery_helpers/nosizevector.hpp',
   'classhelpers/bitsery_helpers/eigen.hpp',
