--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,13 @@ on:
     #  - "**.c"
     #  - "**.h"
 
+
+# make sure that multiple jobs don't run for the same action (new commits cancel old jobs when they are still running)
+# Souce Ralf Gommers (commit to meson-python)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 # env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   #BUILD_TYPE: Release
