install clang 14 (15 still failing with boost)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -228,6 +228,9 @@ jobs:
       with:
         key: ci-mac  # name for the cache
         
+    # install clang 14
+    - run: brew install llvm@14
+        
     - run: brew install libomp boost
     
     - run: pip install meson ninja pytest
