--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -16,12 +16,12 @@ headers = [
   'helper.hpp',
   'helper/defaultsharedpointermap.hpp',
   'pyhelper/pyindexer.hpp',
-  'classhelpers/objectprinter.hpp',
-  'classhelpers/bitsery.hpp',
-  'classhelpers/stream.hpp',
-  'classhelpers/bitsery_helpers/helpers.hpp',
-  'classhelpers/bitsery_helpers/nosizevector.hpp',
-  'classhelpers/bitsery_helpers/eigen.hpp',
+  'classhelper/objectprinter.hpp',
+  'classhelper/bitsery.hpp',
+  'classhelper/stream.hpp',
+  'classhelper/bitsery_helper/helper.hpp',
+  'classhelper/bitsery_helper/nosizevector.hpp',
+  'classhelper/bitsery_helper/eigen.hpp',
   'rotationfunctions/quaternions.hpp',
   'rotationfunctions/helper.hpp',
   'vectorinterpolators.hpp',
