add pyindexerslice as python object (allow implicit conversion for python slice)

--- a/src/pymodule/meson.build
+++ b/src/pymodule/meson.build
@@ -17,7 +17,9 @@ sources = [
     'vectorinterpolators/c_akimainterpolator.cpp',
     'vectorinterpolators/c_slerpinterpolator.cpp',
     'classhelper/module.cpp',
-    'classhelper/c_objectprinter.cpp'
+    'classhelper/c_objectprinter.cpp',
+    'pyhelper/module.cpp',
+    'pyhelper/c_pyindexer.cpp'
 ]
 
 # define python module
