--- a/meson.build
+++ b/meson.build
@@ -11,7 +11,7 @@ project(
 
   version: '0.14.2',
   default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++17'],
-  meson_version: '>=0.63' #0.63 added preserve_path for install headers option
+  meson_version: '>=0.64' #last meson version that was tested
 )
 
 projectnamespace = 'themachinethatgoesping'
