debugging windows ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,10 +151,10 @@ jobs:
         version: latest
     
     # make sure meson can find msvc
-    # - name: Prepare MSVC
-    #   uses: bus1/cabuild/action/msdevshell@v1
-    #   with:
-    #     architecture: x64
+    - name: Prepare MSVC
+      uses: bus1/cabuild/action/msdevshell@v1
+      with:
+        architecture: x64
 
     - name: checkout main repository
       uses: actions/checkout@v3
