--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,9 +98,6 @@ jobs:
 
     - name: configure meson
       run: meson setup builddir/; meson configure builddir -Dpython.install_env=auto -Dprefix=/usr/;
-      env:
-        CC: gcc
-        CXX: gcc
 
     - name: compile project
       run: meson compile -C builddir/
@@ -132,7 +129,7 @@ jobs:
         boost-version: [1.79.0]
         boost-version_: [1_79_0]
         boost-modules: [--with-iostreams]
-        toolset: [clang-cl, clang]
+        toolset: [clang-cl, gcc]
           
     env:
       #CC: msvc-14.32
@@ -146,6 +143,11 @@ jobs:
     - uses: actions/setup-python@v3
       with:
         python-version: '3.10'
+        
+    - name: Set up MinGW
+      uses: egor-tensin/setup-mingw@v2
+      with:
+        platform: x64
 
     - name: Set up Clang
       uses: egor-tensin/setup-clang@v1
