--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ concurrency:
   
 jobs:
   linux:
-    name: Build and install with meson on ${{matrix.container}}
+    name: ci on ${{matrix.container}}
     strategy:
       fail-fast: false
       matrix:
@@ -86,7 +86,7 @@ jobs:
       if: ${{ matrix.ccache }}
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: super-ci-${{ matrix.container }}  # name for the cache
+        key: tools-ci-${{ matrix.container }}  # name for the cache
 
     - name: install dependencies (c++)
       if:  ${{matrix.dep}}
@@ -122,7 +122,7 @@ jobs:
     
 
   build-on-windows:
-    name: Build and install with meson on windows
+    name: ci on windows
     strategy:
       fail-fast: false
       matrix:
@@ -133,8 +133,8 @@ jobs:
           
     env:
       #CC: msvc-14.32
-      CC: ${{matrix.toolset}}
-      CXX: ${{matrix.toolset}}
+      CC: sccache ${{matrix.toolset}}
+      CXX: sccache ${{matrix.toolset}}
 
     runs-on: windows-latest
     #container: python:latest #pull directly from dockerhub   
@@ -164,7 +164,7 @@ jobs:
     - name: sccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: super-ci-win       # name for the cache
+        key: tools-ci-win       # name for the cache
         variant: sccache  # supports windows
 
 
@@ -218,7 +218,7 @@ jobs:
         path: builddir/meson-logs/testlog.txt
 
   macos:
-    name: Build and install with meson on macOS
+    name: ci on macOS
     runs-on: macos-latest
       
     steps:
@@ -236,7 +236,7 @@ jobs:
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: super-ci-mac  # name for the cache
+        key: tools-ci-mac  # name for the cache
         
     # install clang 14
     - run: brew install llvm@14
