--- a/meson.build
+++ b/meson.build
@@ -10,8 +10,8 @@ project(
   license: 'MPL-2.0',
 
   version: '0.16.3',
-  default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++17'],
-  meson_version: '>=1.0' #last meson version that was tested
+  default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++20'],
+  meson_version: '>=1.1' #first meson version to support c++20 with clang
 )
 
 projectnamespace = 'themachinethatgoesping'
@@ -42,7 +42,7 @@ fmt_dep = subproject('fmt', default_options: 'default_library=static').get_varia
 # indicators for pretty progress bars
 indicators_dep = dependency('indicators', static: true)
 
-#date (to be replaced with c++17 features)
+#date (to be replaced with c++20 features)
 hinnant_date_dep = subproject('hinnant-date', default_options: 'header_only=true').get_variable('date_dep')
 
 #bitsery (for object serialization)
