made meson build meson-python 0.13 complient

--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,7 @@ project(
   'cpp',
   license: 'MPL-2.0',
 
-  version: '0.16.4',
+  version: '0.16.5',
   default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++17'],
   meson_version: '>=1.0' #last meson version that was tested
 )
@@ -62,7 +62,8 @@ xxhash_cpp_dep = dependency('xxhash_cpp')
 
 # -- python modules --
 if get_option('build_pythonmodule').enabled()
-  pymod = import('python').find_installation(get_option('python_path'))
+
+  pymod = import('python').find_installation(get_option('python_path'), pure: false)
 
   python3_dep = pymod.dependency()
   pybind11_dep = dependency('pybind11')
@@ -84,8 +85,7 @@ if get_option('build_pythonmodule').enabled()
   numpy_dep = declare_dependency(include_directories: inc_np)
 
   # set path where to install sources (pythonpath/site-packages/projectnamespace)
-  pythoninstallpath = pymod.get_install_dir() + projectnamespace + '/'
-  message('python module install directory:', pythoninstallpath)
+  message('python module install directory:', pymod.get_install_dir(subdir: projectnamespace))
 endif
 
 #themachinethatgoesping meta info
