--- a/python/meson.build
+++ b/python/meson.build
@@ -19,7 +19,7 @@ if get_option('build_pythonmodule').enabled()
     if get_option('pydev_install').disabled() #don't install if pydev_install is activated
         foreach source : sources
             #create install path for file
-            fields = [pymod.get_install_dir()]
+            fields = []
             foreach field : source.split('/')
                 if not field.endswith('.py')
                     fields += [field]
@@ -27,7 +27,7 @@ if get_option('build_pythonmodule').enabled()
             endforeach
             pth = '/'.join(fields)
 
-            install_data(source, install_dir: pth, install_tag: 'python-runtime')
+            pymod.install_sources(source, subdir: pth, install_tag: 'python-runtime')
         endforeach
 
     endif
