--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,16 +57,19 @@ jobs:
       matrix:
         include:  
           - { container: 'ghcr.io/themachinethatgoesping/ubuntu-dep:latest',
-              ccache: 'true'}
+              ccache: 'true',
+              pip2: 'pip install -r requirements.txt'}
           - { container: 'ubuntu:22.04', 
               ccache: 'true',
               pre-dep : 'apt update && apt-get install -y sudo git git-lfs', 
               dep : 'sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev', 
-              pip : 'pip install meson meson-python ninja pytest numpy' }
+              pip : 'pip install meson meson-python ninja pytest numpy',
+              pip2: 'pip install -r requirements.txt'}
           - { container: 'archlinux', 
               pre-dep : 'pacman -Syu --noconfirm; pacman -Syy sudo git git-lfs --noconfirm', 
               dep : 'sudo pacman -Syy --noconfirm base-devel ccache pkg-config cmake python-pip boost curl', 
-              pip : 'pip install meson meson-python ninja pytest numpy' }
+              pip : 'pip install meson meson-python ninja pytest numpy --break-system-packages',
+              pip2: 'pip install -r requirements.txt --break-system-packages' }
     
     runs-on: ubuntu-latest
     container: ${{matrix.container}}
@@ -86,7 +89,7 @@ jobs:
       if: ${{ matrix.ccache }}
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: tools-ci-${{ matrix.container }}  # name for the cache
+        key: super-ci-${{ matrix.container }}  # name for the cache
 
     - name: install dependencies (c++)
       if:  ${{matrix.dep}}
@@ -109,7 +112,8 @@ jobs:
       run: meson install -C builddir/
 
     - name: install pip requirements
-      run: pip install -r requirements.txt
+      if:  ${{matrix.pip2}}
+      run: ${{matrix.pip2}}
 
     - name: test (pytest)
       run: pytest -v
@@ -160,6 +164,7 @@ jobs:
     - uses: TheMrMilchmann/setup-msvc-dev@v2
       with:
         arch: x64
+        #toolset: 14.34
 
     - name: checkout main repository
       uses: actions/checkout@v3
@@ -170,7 +175,7 @@ jobs:
     - name: sccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: tools-ci-win       # name for the cache
+        key: super-ci-win       # name for the cache
         variant: sccache  # supports windows
 
 
@@ -180,7 +185,7 @@ jobs:
       with:
         path: c:\Boost
         #key: windows-msvc-14.32-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
-        key: windows-${{matrix.toolset}}-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}-2
+        key: windows-${{matrix.toolset}}-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
   
     - name: Install dependencies on windows
       if: steps.cache-boost.outputs.cache-hit != 'true'
@@ -242,7 +247,7 @@ jobs:
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: tools-ci-mac  # name for the cache
+        key: super-ci-mac  # name for the cache
         
     # install clang 14
     - run: brew install llvm@14
