--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,9 +130,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        boost-version: [1.82.0]
-        boost-version_: [1_82_0]
-        boost-modules: [--with-iostreams]
         include:
           - toolset: vc143
             compiler: clang-cl
@@ -179,33 +176,36 @@ jobs:
         variant: sccache  # supports windows
 
 
-    - name: Cache Boost
-      id: cache-boost
-      uses: actions/cache@v3
-      with:
-        path: c:\Boost
-        #key: windows-msvc-14.32-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
-        key: windows-${{matrix.toolset}}-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
+    # - name: Cache Boost
+    #   id: cache-boost
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: c:\Boost
+    #     #key: windows-msvc-14.32-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
+    #     key: windows-${{matrix.toolset}}-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
   
-    - name: Install dependencies on windows
-      if: steps.cache-boost.outputs.cache-hit != 'true'
-      run: |
-        Invoke-WebRequest -Uri https://boostorg.jfrog.io/artifactory/main/release/${{matrix.boost-version}}/source/boost_${{matrix.boost-version_}}.7z -outfile boost.7z
-        7z x boost.7z 
-        cd .\boost_${{matrix.boost-version_}}\
-        .\bootstrap.bat ${{matrix.toolset}}
-        .\b2.exe install --variant=release --threading=multi --link=static ${{matrix.boost-modules}}
-        cd ..
-        #rm -rv boost*
+    # - name: Install dependencies on windows
+    #   if: steps.cache-boost.outputs.cache-hit != 'true'
+    #   run: |
+    #     Invoke-WebRequest -Uri https://boostorg.jfrog.io/artifactory/main/release/${{matrix.boost-version}}/source/boost_${{matrix.boost-version_}}.7z -outfile boost.7z
+    #     7z x boost.7z 
+    #     cd .\boost_${{matrix.boost-version_}}\
+    #     .\bootstrap.bat ${{matrix.toolset}}
+    #     .\b2.exe install --variant=release --threading=multi --link=static ${{matrix.boost-modules}}
+    #     cd ..
+    #     #rm -rv boost*
 
     # same as for linux
 
     - name: install dependencies (meson & python)
-      run: pip install meson meson-python ninja pytest numpy
+      run: pip install meson meson-python ninja pytest numpy conan
+
+    - name: install dependencies (run conan)
+      run: conan install . --output-folder=conanlibs --build=missing -s compiler.cppstd=20
 
     - name: configure meson
       run: |
-        meson setup builddir/ -D"python.install_env=auto" -Ddefault_library=static -D"python.install_env=auto" -Dcpp_std=${{matrix.cpp_std}}
+        meson setup builddir/ -D"python.install_env=auto" -Ddefault_library=static -D"python.install_env=auto" -Dcpp_std=${{matrix.cpp_std}} --native-file=conanlibs/conan_meson_native.ini
 
     - name: compile project
       run: meson compile -C builddir/
