see if boost builds native c++std

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
       run: conan profile detect --force 
 
     - name: install dependencies (run conan)
-      run: conan install . --output-folder=conanlibs --build=missing -s compiler.cppstd=20
+      run: conan install . --output-folder=conanlibs --build=missing #-s compiler.cppstd=20
 
     - name: configure meson
       run: |
