--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,24 +176,24 @@ jobs:
         variant: sccache  # supports windows
 
 
-    # - name: Cache Boost
-    #   id: cache-boost
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: c:\Boost
-    #     #key: windows-msvc-14.32-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
-    #     key: windows-${{matrix.toolset}}-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
+    - name: Cache Boost
+      id: cache-boost
+      uses: actions/cache@v3
+      with:
+        path: c:\Boost
+        #key: windows-msvc-14.32-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
+        key: windows-${{matrix.toolset}}-boost-${{matrix.boost-version}}-${{matrix.boost-modules}}
   
-    # - name: Install dependencies on windows
-    #   if: steps.cache-boost.outputs.cache-hit != 'true'
-    #   run: |
-    #     Invoke-WebRequest -Uri https://boostorg.jfrog.io/artifactory/main/release/${{matrix.boost-version}}/source/boost_${{matrix.boost-version_}}.7z -outfile boost.7z
-    #     7z x boost.7z 
-    #     cd .\boost_${{matrix.boost-version_}}\
-    #     .\bootstrap.bat ${{matrix.toolset}}
-    #     .\b2.exe install --variant=release --threading=multi --link=static ${{matrix.boost-modules}}
-    #     cd ..
-    #     #rm -rv boost*
+    - name: Install dependencies on windows
+      if: steps.cache-boost.outputs.cache-hit != 'true'
+      run: |
+        Invoke-WebRequest -Uri https://boostorg.jfrog.io/artifactory/main/release/${{matrix.boost-version}}/source/boost_${{matrix.boost-version_}}.7z -outfile boost.7z
+        7z x boost.7z 
+        cd .\boost_${{matrix.boost-version_}}\
+        .\bootstrap.bat ${{matrix.toolset}}
+        .\b2.exe install --variant=release --threading=multi --link=static ${{matrix.boost-modules}}
+        cd ..
+        #rm -rv boost*
 
     # same as for linux
 
