add hashhelper to make xt::xtensor hashable

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -14,6 +14,7 @@ sources = [
 headers = [
   'timeconv.hpp',
   'helper.hpp',
+  'hashhelper.hpp',
   'helper/defaultmap.hpp',
   'helper/defaultsharedpointermap.hpp',
   'pyhelper/pyindexer.hpp',
