--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
       run: meson compile -C builddir/
 
     - name: test (cpp)
-      run: meson test -C builddir/
+      run: meson test -C builddir/ --print-errorlogs
 
     - name: install project
       run: meson install -C builddir/
@@ -210,7 +210,7 @@ jobs:
       run: meson compile -C builddir/
 
     - name: test (cpp)
-      run: meson test -C builddir/
+      run: meson test -C builddir/ --print-errorlogs
 
     - name: install project
       run: meson install -C builddir/
@@ -262,7 +262,7 @@ jobs:
       run: meson compile -C builddir/
 
     - name: test (cpp)
-      run: meson test -C builddir/
+      run: meson test -C builddir/ --print-errorlogs
 
     - name: install project
       run: meson install -C builddir/
