experimenting with precompiled headers

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -55,6 +55,7 @@ if build_machine.system() != 'linux'
                         override_options: [
                           'b_lundef=false'
                       ],
+                        cpp_pch : 'pch/pch.hpp',
                         install : true
                         )
 else  
@@ -73,6 +74,7 @@ else
                         override_options: [
                           'b_lundef=false'
                       ],
+                        cpp_pch : 'pch/pch.hpp',
                         install : true
                         )
 endif
